rework tab icon